Make background white when using DeviceComponents

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
 
     body {
-      background: black;
+      background: white;
       font: 28px/1em "Helvetica";
       color: #FFF;
     }
