Change the cursor to look like a touch point
This matches the default output of Framer Studio.

--- a/boilerplate/project/index.html
+++ b/boilerplate/project/index.html
@@ -27,6 +27,7 @@
       background: white;
       font: 28px/1em "Helvetica";
       color: #FFF;
+      cursor: url('images/cursor.png') 39 39, auto;
     }
 
     a {
